--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,35 @@
+Django==1.8
+Mako==1.0.4
+MarkupSafe==0.23
+Pillow==3.2.0
+PyYAML==3.11
+SQLAlchemy==1.0.15
+XlsxWriter==0.8.9
+alembic==0.8.7
 awsebcli==3.7.7
 blessed==1.9.5
 botocore==1.4.36
 cement==2.8.2
 colorama==0.3.7
-Django==1.9.6
+dataset==0.6.4
+django-bugtracker==1.1.0
 docker-py==1.7.2
 dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.12
 jmespath==0.9.0
+normality==0.2.4
 pathspec==0.3.4
-Pillow==3.2.0
 psycopg2==2.6.1
 python-dateutil==2.5.3
-PyYAML==3.11
+python-editor==1.0.1
 reportlab==3.3.0
 requests==2.9.1
 semantic-version==2.5.0
 six==1.10.0
+tabulate==0.7.5
+tellme==0.2.6
 texttable==0.8.4
 wcwidth==0.1.7
 websocket-client==0.37.0
-XlsxWriter==0.8.9
+wsgiref==0.1.2
